	- Declare n_a in ssleay_set_psk_client_callback_invoke and
	  ssleay_ctx_set_psk_client_callback_invoke to avoid a compilation
	  error with Perl versions below 5.8.8. Fixes RT#128030. Thanks to
	  Graham Ollis for the report.
	- Add X509_get0_serialNumber. Thanks to Marc Reisner.
	- Enable Travis CI for LibreSSL 2.2.1, 2.7.5, 2.8.3 and 2.9.0
	  on Perl 5.20 and more recent.

1.86_07 2018-12-13
        - Net::SSLeay::RSA_generate_key() now prefers using
          RSA_generate_key_ex. This avois deprecated RSA_generate_key
          and allows removing the only Android specific code in
          SSLeay.xs. Fixes RT#127593. Thanks to Rouven Weiler.
	- SSL_CTX_get0_param, SSL_CTX_get0_param,
	  X509_VERIFY_PARAM_set1_host, X509_VERIFY_PARAM_add1_host,
	  X509_VERIFY_PARAM_set_hostflags,
	  X509_VERIFY_PARAM_get0_peername,
	  X509_VERIFY_PARAM_set1_email, X509_VERIFY_PARAM_set1_ip and
	  X509_VERIFY_PARAM_set1_ip_asc added in 1.83 for OpenSSL
	  1.0.2 and later are now available with LibreSSL 2.7.0 and
	  later.
	- get_keyblock_size() now gets the MAC secret size from the
	  cipher on LibreSSL 2.7.0 and later, rather than reaching
	  into libssl internals. This effectively takes the OpenSSL
	  1.1 code path for LibreSSL 2.7.0 instead of the OpenSSL 1.0
	  code path.  Thanks to Alexander Bluhm.
	- get_client_random and get_server_random now use API
	  functions supported by LibreSSL 2.7.0 and later. Thanks to
	  Alexander Bluhm.
	- Add X509_check_host(), X509_check_email(), X509_check_ip(),
	  and X509_check_ip_asc() for LibreSSL 2.5.0 and later. Thanks
	  to Alexander Bluhm.
        - OpenSSL_version() and OpenSSL_version_num() are available
          with LibreSSL 2.7.0 and later. Thanks to Alexander Bluhm.
        - Use OPENSSL_cleanse() instead of memset(). Fixes
          RT#116599. Thanks to A. Sinan Unur.

1.86_06 2018-09-29
	- Net::SSLeay::read() and SSL_peek() now check SSL_get_error()
	  for SSL_ERROR_ZERO_RETURN for return values <= 0 to make