@@ -115,5 +115,6 @@ t/local/62_threads-ctx_new-deadlock.t
 t/local/63_ec_key_generate_key.t
 t/local/64_ticket_sharing.t
 t/local/65_ticket_sharing_2.t
+t/local/66_curves.t
 t/local/kwalitee.t
 typemap
