@@ -8983,6 +8983,40 @@ like X509_set_pubkey.
 This function has no equivalent in OpenSSL but combines multiple OpenSSL
 functions for an easier interface.
 
+=item * CTX_set_ecdh_auto, set_ecdh_auto
+
+These functions enable or disable the automatic curve selection on the server
+side by calling SSL_CTX_set_ecdh_auto or SSL_set_ecdh_auto respectively.
+If enabled the highest preference curve is automatically used for ECDH temporary
+keys used during key exchange.
+This function is no longer available for OpenSSL 1.1.0 or higher.
+
+  Net::SSLeay::CTX_set_ecdh_auto($ctx,1);
+  Net::SSLeay::set_ecdh_auto($ssl,1);
+
+=item * CTX_set1_curves_list, set1_curves_list
+
+These functions set the supported curves (in order of preference) by calling
+SSL_CTX_set1_curves_list or SSL_set1_curves_list respectively.
+For a TLS client these curves are offered to the server in the supported curves
+extension while on the server side these are used to determine the shared
+curve.
+These functions are only available since OpenSSL 1.1.0.
+
+  Net::SSLeay::CTX_set1_curves_list($ctx,"P-521:P-384:P-256");
+  Net::SSLeay::set1_curves_list($ssl,"P-521:P-384:P-256");
+
+=item * CTX_set1_groups_list, set1_groups_list
+
+These functions set the supported groups (in order of preference) by calling
+SSL_CTX_set1_groups_list or SSL_set1_groups_list respectively.
+This is practically the same as CTX_set1_curves_list and set1_curves_list except
+that all DH groups can be given as supported by TLS 1.3.
+These functions are only available since OpenSSL 1.1.1.
+
+  Net::SSLeay::CTX_set1_groups_list($ctx,"P-521:P-384:P-256");
+  Net::SSLeay::set1_groups_list($ssl,"P-521:P-384:P-256");
+
 =back
 
 
